# notification

./: pyproject.toml
django_notification.egg-info/: SOURCES.txt
notification/: atomformat.py  decorators.py  feeds.py  lockfile.py  models.py  urls.py  views.py
notification/migrations/: 0001_initial.py
notification/templates/notification/: notices.html
tests/: test_models.py
