[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-notification"
description = 'User notification management for the Django web framework'
readme = "README.md"
requires-python = ">=3.7"
keywords = ["django", "notifications"]
authors = [
  { name = "Kehinde Adewusi", email = "kehinde.adewusi@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Framework :: Django",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "django==4.1.7",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/evince/notification#readme"
Issues = "https://github.com/evince/notification/issues"
Source = "https://github.com/evince/notification"

[tool.hatch.version]
path = "notification/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.envs.default]
dependencies = [
  "pytest==7.2.0",
  "pytest-cov==4.0.0",
  "pytest-mock==3.10.0",
  "requests-mock==1.10.0",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=notification --cov=tests"
no-cov = "cov --no-cov"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
